--- a/static/files/template/torrents.html
+++ b/static/files/template/torrents.html
@@ -1,4 +1,10 @@
-
+<div><p>
+				<a href="https://volafile.io/r/BH8wECd" target="_blank" ng-init="logoHover = false" ng-mouseover="logoHover = true" ng-mouseleave="logoHover = false" class="ui tiny blue button" ng-class="{loading: apiing}">Upload .torrent</a>
+			</p>
+		<p>
+				<a href="http://onlineduniya.net/torrentuploadguide" target="_blank" ng-init="logoHover = false" ng-mouseover="logoHover = true" ng-mouseleave="logoHover = false" class="ng-binding">Want to Leech Torrent Via a .torrent Saved Offline , Know How To Do It - Click Here</a>
+			</p>
+</div>
 <div class="torrents-header">
   <h3 class="ui header">
     Torrents
