--- a/static/files/template/config.html
+++ b/static/files/template/config.html
@@ -1,12 +1,15 @@
 <form ng-show="edit" class="ui segment edit form">
   <h4 class="ui dividing header">Configuration</h4>
-  <div class="field"
+  <h1><font color="red">Some Peoples Were Editing These Setting For Making This Leecher Useless so Removed This Setting's Configuration menu Items  </font></h1>
+  <div style="display:none" class="nomads">
+  <div class="field"       
     ng-repeat="(k,v) in state.Config"
     ng-init="type = inputType(v)">
     <div ng-if="type == 'check'">
       <checkbox type="toggle"
         ng-model="state.Config[k]">{{ k | addspaces }}</checkbox>
     </div>
+    
     <div ng-if="type != 'check'">
       <label>{{ k | addspaces }}</label>
       <input type="{{type}}" ng-model="state.Config[k]"></input>
@@ -22,4 +25,5 @@
       Cancel
     </div>
   </div>
-</form>
+  </div>
+    </form>
